--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Pratik Kumar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.6"
+    "nodemon": "^3.1.6",
+    "prettier": "^3.3.3"
   }
 }
