Utils code Discussion

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,51 @@
 PORT=8000
-MONGODB_URL=mongodb+srv://MonuBhai:6vfysbPQe0siNrlG@cluster0.4ar6a.mongodb.neft
+CORS_ORIGIN =*
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+MONGODB_URI=mongodb+srv://MonuBhai:6vfysbPQe0siNrlG@cluster0.4ar6a.mongodb.neft
